--- a/project_3/css/common.css
+++ b/project_3/css/common.css
@@ -14,6 +14,7 @@
 body{
   font-family: 'SpoqaHanSansNeo-Regular',Arial, Helvetica, sans-serif;
   padding-bottom: 100px; /* 하단 바텀바 공간으로 인한 여백 */
+  text-rendering: geometricPrecision;
 }
 main{
   margin-top: 60px;
