--- a/project_3/css/main.css
+++ b/project_3/css/main.css
@@ -10,7 +10,12 @@
   margin: 3px;
 }
 .swiper-pagination-bullet-active{background: var(--main_color) !important;}
-
+h2{
+  text-rendering: geometricPrecision;
+  font-size: 18px;
+  margin: 0;
+  line-height: 32px;
+}
 /* -----------1. 메인배너------------ */
 #sec01{
   position: relative;
@@ -47,6 +52,21 @@
   font-weight: bold;
   font-size: 24px;
 }
+/* placeholder 텍스트 스타일링 */
+#main_search::placeholder{
+  font-size: 13px; /* 원하는 크기로 설정 */
+  color: #aaa;
+}
+/* 각 브라우저의 벤더 접두사 사용 */
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+  font-size: 13px;
+}
+::-ms-input-placeholder { /* Microsoft Edge */
+  font-size: 13px;
+}
+::-webkit-input-placeholder { /* Chrome, Safari, Opera */
+  font-size: 13px;
+}
 
 /* -----------2. 카테고리------------ */
 .padding{
@@ -70,22 +90,23 @@
   width: 100%;
 }
 .title_txt, .sub_txt{
-  overflow: hidden;
   text-overflow: ellipsis;
-  line-height: initial;
-  display: -webkit-box;  /* 2줄 이상 말줄임처리 */
-  -webkit-line-clamp: 1;
+  line-height: 1.2em;
+  display: -webkit-box;
   -webkit-box-orient: vertical;
   font-size: 13px;
+  overflow: hidden;
 }
 .title_txt{
   font-weight: 600;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 2; /* 1줄에서 말줄임 처리 */
+  height: 2.4em; /* line-height * 1 */
 }
 .sub_txt{
-  opacity: 0.4;
+  opacity: 0.6;
   margin-bottom: 0;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 1; /* 1줄에서 말줄임 처리 */
+  height: 1.2em; /* line-height * 1 */
 }
 
 /* -------4. 여행메이트 구해요 서식------- */
@@ -101,11 +122,16 @@
     flex: 0 0 50%;
   }
 }
+.row>*{
+  padding-right: 5px;
+  padding-left: 5px;
+}
 .card{
   position: relative;
   border: none;
   overflow: hidden;
   aspect-ratio: 3 / 4; /* 가로 3, 세로 4 비율 */
+  border-radius: 15px;
 }
 .card img{
   width: 100%;
@@ -131,12 +157,13 @@
   color: white;
 }
 .card-title{
-  font-size: 1rem;
-  font-weight: normal;
+  font-size: 14px;
+  font-weight: bold;
 }
 .card-text{
-  font-size: 14px;
+  font-size: 12px;
   opacity: 0.8;
+  font-weight: bold;
 }
 
 /* ------5. 제휴광고---------- */
@@ -179,18 +206,24 @@
 /* 순위 플래그 */
 .flag{
   position: absolute;
-  top:3px;
+  top:0px;
   left: 25px;
-
-}
-.flag svg{
-  transform: scale(1.2);
 }
 .flag span{
   position: absolute;
   left: 8px;
   color: white;
-  transform: scale(1.2);
+  font-weight: bold;
+}
+/* 해쉬버튼 서식 */
+.hash_btn{
+  background: var(--main_color);
+  color:#fff;
+  font-size: 12px;
+  padding: 3px 5px;
+  width: 100%;height: 100%;
+  border-radius: 5px;
+
 }
 
 /* 슬라이드 서식 */
@@ -223,7 +256,7 @@ ul,ol,li {list-style: none;}
   overflow: hidden;
   display: block;
   position: relative;
-  padding-bottom: 120%;
+  padding-bottom: 130%;
   border-radius: 10px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
 } 
@@ -252,3 +285,111 @@ ul,ol,li {list-style: none;}
 #sec06 .swiper-pagination{
   position: relative;
 }
+
+/* -------7. 베스트 이용 리뷰--------- */
+#review{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+#review > div:first-of-type{
+  width: 30%;
+  min-width: 100px;
+  max-width: 150px;
+  overflow: hidden;
+  aspect-ratio: 1 / 1; /* 가로 1, 세로 1 비율 */
+  border-radius: 15px;
+}
+#review img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#review .title_txt{
+  text-overflow: ellipsis;
+  line-height: 1.2em;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  font-size: 13px;
+  overflow: hidden;
+  -webkit-line-clamp: 1; /* 1줄에서 말줄임 처리 */
+  height: 1.2em; /* line-height * 1 */
+}
+#review .sub_txt{
+  -webkit-line-clamp: 3; /* 3줄에서 말줄임 처리 */
+  height: 3.6em; /* line-height * 3 */
+}
+
+
+
+
+/* -------9. 내 주변 핫플레이스 ------- */
+.tab-btn{
+  border-radius: 20px;
+  background: #fff;
+  color: #aaa;
+  border: 1px solid #aaa;
+  font-size: 14px;
+  padding-block: 5px;
+  padding-inline: 10px;
+}
+.active-tab{
+  background: var(--main_color);
+  color: #fff;
+  border: var(--main_color);
+}
+
+#sec09 .card{
+  aspect-ratio: 3 / 2; /* 가로 2, 세로 1 비율 */
+  border-radius: 15px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+#sec09 .card-body {
+  padding: 20px 15px;
+  background: #fff;
+  color: #000;
+  border-radius: 15px;
+}
+#sec09 .card-title{
+  font-size: 14px;
+  font-weight: bold;
+  display: -webkit-box;
+  -webkit-line-clamp: 1; /* 1줄에서 말줄임 처리 */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+#sec09 .card-text, #sec09 .card-text i{
+  font-size: 12px;
+  opacity: 0.8;
+  font-weight: normal;
+}
+
+
+/* 푸터서식 */
+footer{
+  border-top: 1px solid #ccc;
+  font-size: 12px;
+  color: #aaa;
+}
+.footer-links{
+  text-wrap: nowrap;
+  flex-wrap: wrap;
+}
+.footer-links a{
+  color: #aaa;
+}
+.footer-links a::after{   /* 글자 옆 | 표시 */
+  content: '';
+  display: inline-block;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 1px;
+  height: 10px;
+  background-color: #ccc;
+}
+/* .footer-links a:nth-of-type(3):after {display: none;}
+.footer-links a:nth-of-type(5):after {display: none;} */
+
+
