--- a/easycook/css/main.css
+++ b/easycook/css/main.css
@@ -28,6 +28,7 @@ html {
   font-size: 16px;
 }
 
+/* 화면 크기가 375px 미만일 때 기본 폰트 크기를 14px로 조정 */
 .cart {
   position: absolute;
   top: 10px;
@@ -60,6 +61,7 @@ html {
   display: flex;
   justify-content: space-between;
   gap: 10px;
+  margin-bottom: 0;
 }
 .tab > ul li {
   width: 100%;
@@ -76,7 +78,6 @@ html {
   border-bottom: none;
 }
 .tab .tab_con {
-  border-top: 1px solid #D9D9D9;
   background: #ffffff;
 }
 .tab .tab_con div {
@@ -89,6 +90,7 @@ html {
 .list {
   border-radius: 0;
   width: 100%;
+  padding: 0;
 }
 .list li {
   display: flex;
@@ -144,6 +146,11 @@ html {
 .btn-box-s .btn-s {
   width: 50%;
 }
+.btn-box-s .btn-s.line {
+  border: 1px solid #EF2F15;
+  background: #ffffff;
+  color: #EF2F15;
+}
 
 .btn-box-l {
   width: 100%;
@@ -151,6 +158,70 @@ html {
   flex-wrap: wrap;
   gap: 10px;
 }
+.btn-box-l .btn-l.line {
+  border: 1px solid #EF2F15;
+  background: #ffffff;
+  color: #EF2F15;
+}
+
+.card-list h2 {
+  margin-left: 8px;
+  font-size: 0.875rem;
+  font-weight: 700;
+}
+.card-list > ul > li {
+  width: 90%;
+  height: 117px;
+  margin: 0 auto;
+  margin-top: 35px;
+  border: 1px solid #D9D9D9;
+  border-radius: 5px;
+  display: flex;
+  padding: 8px;
+}
+.card-list > ul > li > img {
+  width: 30%;
+}
+.card-list > ul > li > div {
+  width: 70%;
+  position: relative;
+}
+.card-list span {
+  position: absolute;
+  font-size: var(--fs-xsmall);
+  font-weight: var(--fw-light);
+  color: var(--red);
+  left: 8px;
+  top: 47px;
+}
+.card-list span:nth-child(3) {
+  left: 50px !important;
+}
+.card-list span:nth-child(4) {
+  left: 140px !important;
+}
+.card-list div ul {
+  width: 100%;
+  position: absolute;
+  display: flex;
+  left: 8px;
+  bottom: 0px;
+}
+.card-list div ul > li {
+  font-size: var(--fs-xsmall);
+  font-weight: var(--fw-light);
+  margin-right: 7px;
+}
+.card-list div ul > li:last-child {
+  transform: translateY(-5px);
+}
+.card-list button {
+  background: #fff;
+  width: 25px;
+  border: none;
+  padding: 0px;
+}
+
 /* -------공통 서식 -------*/
 img {
   width: 100%;
